# bingo-app

./: .gitignore  Bingo Tiles.csv  CLAUDE.md  IMAGES_NOTE.md  MANIFEST.in  README.md  bingo.jinja  create_bingo_card.py  image_processor.py  pyproject.toml  requirements.txt  setup.py  themes.py
bingo_v1/: Bingo Tiles.csv  README.md  bingo.jinja  create_bingo_card.py  ghost_hunt_tiles.csv  requirements.txt  themes.py
bingo_v2/: CONDA_SETUP.md  IMPLEMENTATION_SUMMARY.md  README.md  REFACTORING_PLAN.md  SETUP_AND_TESTING.md
bingo_v2/backend/: app.py  requirements.txt
bingo_v2/backend/tests/: test_api_endpoints.py  test_image_processing.py
bingo_v2/frontend/: package-lock.json  package.json
bingo_v2/frontend/coverage/: clover.xml  coverage-final.json  lcov.info
bingo_v2/frontend/public/: manifest.json
bingo_v2/frontend/src/: App.js
bingo_v2/frontend/src/__tests__/: winDetection.test.js
bingo_v2/frontend/src/components/: Celebrations.js  Footer.js  Header.js
bingo_v2/frontend/src/pages/: BingoCardPage.js  HomePage.js  SettingsPage.js
bingo_v2/frontend/src/styles/: App.css  BingoCard.css  Celebrations.css  Footer.css  Header.css  Settings.css  index.css  themes.css
bingo_v2/frontend/src/utils/: testBackground.js  winDetection.js
bingo_v2/scripts/: run_backend.sh  start_app.sh  test_backend.sh
