[project]
name = "bingo-card-generator"
version = "1.0.0"
description = "A customizable bingo card generator that creates interactive HTML bingo cards"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Bingo App Developer" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "jinja2",
    "pillow",
    "numpy",
    "click",
    "rich",
    "questionary",
]

[project.scripts]
create-bingo-card = "create_bingo_card:main"
create-spooky-bingo = "create_bingo_card:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "*.jinja",
    "*.csv",
    "images/*",
]
